# data_structuresCmake

dataStructures/: CMakeLists.txt
dataStructures/include/: CMakeLists.txt  doublylist.h  queue.h  singlelist.h  stack.h
dataStructures/src/: CMakeLists.txt  main.cpp  singlelist.cpp
dataStructures/tests/: CMakeLists.txt
dataStructures/tests/doublyList/: CMakeLists.txt  main.cpp  tester_doublylist.cpp
dataStructures/tests/queue/: CMakeLists.txt  tester_queue.cpp
dataStructures/tests/singleList/: CMakeLists.txt  tester_singlelist.cpp  tester_usuario.cpp
dataStructures/tests/stack/: CMakeLists.txt  tester_stack.cpp
