

cmake_minimum_required(VERSION 3.5)
# Widgets finds its own dependencies (QtGui and QtCore).
find_package(Qt5Widgets PATHS "/home/julio/Qt/5.6/gcc_64/lib/cmake" REQUIRED)
add_definitions(-std=c++11)

add_subdirectory(singleList)
add_subdirectory(doublyList)
add_subdirectory(stack)
add_subdirectory(queue)

